Change "save" to "publish" in several messages
Bug: T293854
Change-Id: I3bd7e11903e4b0a24ab3f3000972bda8d0f76db5

--- a/i18n/help/en.json
+++ b/i18n/help/en.json
@@ -54,8 +54,8 @@
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-copyedit-text-rules2": "This sentence contains an opinion that should be removed.",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-copyedit-main-step1": "Once {{GENDER:|you}} see a correction {{GENDER:|you}} want to make, click \"$1\" to get started. Then go ahead and fix issues by deleting and typing as needed.",
 	"growthexperiments-help-panel-suggestededits-tips-minerva-visualeditor-copyedit-main-step1": "Once {{GENDER:|you}} see a correction {{GENDER:|you}} want to make, tap the edit pencil on that section to get started. Then go ahead and fix issues by deleting and typing as needed.",
-	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-copyedit-main-publish": "Either find more changes to make, or go ahead and click \"$1\" to save {{GENDER:|your}} edit!",
-	"growthexperiments-help-panel-suggestededits-tips-minerva-visualeditor-copyedit-main-publish": "Either find more changes to make, or go ahead and tap the blue arrow button to save {{GENDER:|your}} edit!",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-copyedit-main-publish": "Either find more changes to make, or go ahead and click \"$1\" to publish {{GENDER:|your}} edit!",
+	"growthexperiments-help-panel-suggestededits-tips-minerva-visualeditor-copyedit-main-publish": "Either find more changes to make, or go ahead and tap the blue arrow button to publish {{GENDER:|your}} edit!",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-copyedit-text-publish": "[[$1|Learn more about copyediting]]",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-links-main-value": "Links between {{SITENAME}} articles allow readers to click on something they want to learn more about. They help people navigate easily to other {{SITENAME}} articles.",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-links-example-value": "Mercury is the smallest <mark class=\"positive\">planet</mark> in the <mark class=\"positive\">Solar System</mark>.",
@@ -68,8 +68,8 @@
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-links-example-step1": "Venus has a dense <mark class=\"positive\">atmosphere</mark>",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-links-main-step2": "Click the \"$1\" button $2 and choose the {{SITENAME}} article from the list to which it should link.",
 	"growthexperiments-help-panel-suggestededits-tips-minerva-visualeditor-links-main-step2": "Tap the \"$1\" button $2 and choose the {{SITENAME}} article from the list to which it should link.",
-	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-links-main-publish": "Either add more links, or go ahead and click \"$1\" to save {{GENDER:|your}} edit!",
-	"growthexperiments-help-panel-suggestededits-tips-minerva-visualeditor-links-main-publish": "Either add more links, or go ahead and tap the blue arrow button to save {{GENDER:|your}} edit!",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-links-main-publish": "Either add more links, or go ahead and click \"$1\" to publish {{GENDER:|your}} edit!",
+	"growthexperiments-help-panel-suggestededits-tips-minerva-visualeditor-links-main-publish": "Either add more links, or go ahead and tap the blue arrow button to publish {{GENDER:|your}} edit!",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-links-text-publish": "[[$1|Learn more about adding links]]",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-references-main-value": "Everything in {{SITENAME}} comes from reliable sources like books and newspapers. When readers see references to those sources in an article, they can feel confident in what they're learning.",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-references-example-value": "Saturn is probably best known for the system of planetary rings that makes it visually unique.<sup>[3]</sup>",
@@ -81,8 +81,8 @@
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-references-main-step2": "Next, {{GENDER:|you}} can look for sources through search engines, news sites, or {{GENDER:|your}} library.<br />$1&nbsp;&nbsp;$2&nbsp;&nbsp;$3&nbsp;&nbsp;$4<br />Follow these guidelines when adding a reference:\n* Reliable sources include books, news organizations, and magazine articles. \n* Social media or blogs are usually not reliable sources.\n* Information published by the subject, such as a company's own website, is usually not reliable.",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-references-main-step3": "When {{GENDER:|you've}} found a source, click at the end of the sentence and then click the \"$1\" button $2. Add as much information as {{GENDER:|you}} know about the source, and insert the citation.",
 	"growthexperiments-help-panel-suggestededits-tips-minerva-visualeditor-references-main-step3": "When {{GENDER:|you've}} found a source, tap at the end of the sentence and then tap the \"$1\" button $2. Add as much information as {{GENDER:|you}} know about the source, and insert the citation.",
-	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-references-main-publish": "Either add more references, or go ahead and click \"$1\" to save {{GENDER:|your}} edit!",
-	"growthexperiments-help-panel-suggestededits-tips-minerva-visualeditor-references-main-publish": "Either add more references, or go ahead and tap the blue arrow button to save {{GENDER:|your}} edit!",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-references-main-publish": "Either add more references, or go ahead and click \"$1\" to publish {{GENDER:|your}} edit!",
+	"growthexperiments-help-panel-suggestededits-tips-minerva-visualeditor-references-main-publish": "Either add more references, or go ahead and tap the blue arrow button to publish {{GENDER:|your}} edit!",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-references-text-publish": "[[$1|Learn more about references]]",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-update-main-value": "Articles get out of date as time goes on and new events occur. {{GENDER:|You}} can update the text and add the correct details so that {{SITENAME}} always contains the best information.",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-update-example-value": "The probe <mark class=\"negative\">will</mark> land on Mars <mark class=\"negative\">in 2018</mark>.",
@@ -92,8 +92,8 @@
 	"growthexperiments-help-panel-suggestededits-tips-minerva-visualeditor-update-main-step1": "When {{GENDER:|you}} see information that needs to be updated, tap the edit pencil to get started.",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-update-main-step2": "Update the article by deleting and typing. If {{GENDER:|you}} change or add new information, {{GENDER:|you}} should [[$1|add a reference]] for the source of that information.",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-update-main-step2-no-link": "Update the article by deleting and typing. If {{GENDER:|you}} change or add new information, {{GENDER:|you}} should add a reference for the source of that information.",
-	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-update-main-publish": "Either continue updating the article, or go ahead and click \"$1\" to save {{GENDER:|your}} edit!",
-	"growthexperiments-help-panel-suggestededits-tips-minerva-visualeditor-update-main-publish": "Either continue updating the article, or go ahead and tap the blue arrow button to save {{GENDER:|your}} edit!",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-update-main-publish": "Either continue updating the article, or go ahead and click \"$1\" to publish {{GENDER:|your}} edit!",
+	"growthexperiments-help-panel-suggestededits-tips-minerva-visualeditor-update-main-publish": "Either continue updating the article, or go ahead and tap the blue arrow button to publish {{GENDER:|your}} edit!",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-update-text-publish": "[[$1|Learn more about updating]]",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-expand-main-value": "Many {{SITENAME}} articles, whether they are short or long, can be expanded with more information. This helps people learn more about a topic.",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-expand-main-calm": "To make a difference, {{GENDER:|you}} only need to add one new fact to this article. {{GENDER:|You}} do not need to add a whole new paragraph or section.",
@@ -102,8 +102,8 @@
 	"growthexperiments-help-panel-suggestededits-tips-minerva-visualeditor-expand-main-step1": "When {{GENDER:|you}} find a section {{GENDER:|you}} want to expand, tap the edit pencil to get started. If {{GENDER:|you}} wish, {{GENDER:|you}} can add a new header to start a section.",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-expand-main-step2": "When {{GENDER:|you}} add new information, make sure to [[$1|add a reference]], so that others can see where the information came from.",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-expand-main-step2-no-link": "When {{GENDER:|you}} add new information, make sure to add a reference, so that others can see where the information came from.",
-	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-expand-main-publish": "When {{GENDER:|you}} are finished expanding the article, go ahead and click \"$1\" to save {{GENDER:|your}} edit!",
-	"growthexperiments-help-panel-suggestededits-tips-minerva-visualeditor-expand-main-publish": "When {{GENDER:|you}} are finished expanding the article, go ahead and tap the blue arrow button to save {{GENDER:|your}} edit!",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-expand-main-publish": "When {{GENDER:|you}} are finished expanding the article, go ahead and click \"$1\" to publish {{GENDER:|your}} edit!",
+	"growthexperiments-help-panel-suggestededits-tips-minerva-visualeditor-expand-main-publish": "When {{GENDER:|you}} are finished expanding the article, go ahead and tap the blue arrow button to publish {{GENDER:|your}} edit!",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-expand-text-publish": "[[$1|Learn more about expanding articles]]",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-image-recommendation-onboarding-value": "Placeholder text, do not translate yet.",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-link-recommendation-header-value": "Adding links will help people learn faster.",
