--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -374,7 +374,7 @@
 	"growthexperiments-addlink-summary-title": "Summary",
 	"growthexperiments-addlink-summary-column-header-suggestion": "Suggestion",
 	"growthexperiments-addlink-summary-column-header-linked": "Linked?",
-	"growthexperiments-addlink-summary-copyrightwarning": "By saving changes, {{GENDER:|you}} agree to the [https://foundation.wikimedia.org/wiki/Terms_of_Use Terms of Use] and agree to release your contribution under the [https://creativecommons.org/licenses/by-sa/3.0/ CC BY-SA 3.0] and [https://www.gnu.org/licenses/fdl-1.3.html GFDL] licenses.",
+	"growthexperiments-addlink-summary-copyrightwarning": "By publishing changes, {{GENDER:|you}} agree to the [https://foundation.wikimedia.org/wiki/Terms_of_Use Terms of Use] and agree to release your contribution under the [https://creativecommons.org/licenses/by-sa/3.0/ CC BY-SA 3.0] and [https://www.gnu.org/licenses/fdl-1.3.html GFDL] licenses.",
 	"growthexperiments-addlink-summary-summary": "Link suggestions feature: $1 {{PLURAL:$1|link|links}} added.",
 	"growthexperiments-addlink-skip-title": "{{GENDER:|You’ve}} skipped all suggestions for this article.",
 	"growthexperiments-addlink-skip-body": "Are you sure {{GENDER:|you}} don’t want to accept or reject any suggestions?",
@@ -399,7 +399,7 @@
 	"growthexperiments-structuredtask-editmode-confirmation-dialog-action-confirm": "Switch without submitting",
 	"growthexperiments-structuredtask-editmode-confirmation-dialog-action-cancel": "Cancel",
 	"growthexperiments-structuredtask-summary-submit": "Submit",
-	"growthexperiments-addlink-suggestions-outdated": "Another user edited this article while {{GENDER:|you}} were reviewing it, and {{GENDER:|your}} changes could not be saved.",
+	"growthexperiments-addlink-suggestions-outdated": "Another user edited this article while {{GENDER:|you}} were reviewing it, and {{GENDER:|your}} changes could not be published.",
 	"growthexperiments-addimage-inspector-title": "Add a suggested image",
 	"growthexperiments-addimage-inspector-cta": "Add this image to the start of the article?",
 	"growthexperiments-addimage-inspector-yes-button": "Yes",
@@ -461,7 +461,7 @@
 	"growthexperiments-addimage-caption-info-dialog-guidelines-language-generic": "Write in the language of the Wikipedia {{GENDER:|you}} are in.",
 	"growthexperiments-addimage-caption-info-dialog-confirm": "Got it",
 	"growthexperiments-addimage-caption-help-button": "Help with writing an image caption",
-	"growthexperiments-structuredtask-user-error": "We could not save {{GENDER:|your}} edit because {{GENDER:|you}} are no longer logged in. Please log in and try again.",
+	"growthexperiments-structuredtask-user-error": "We could not publish {{GENDER:|your}} edit because {{GENDER:|you}} are no longer logged in. Please log in and try again.",
 	"growthexperiments-structuredtask-user-error-login-cta": "Log in",
 	"growthexperiments-structuredtask-anonuser": "User is no longer logged in.",
 	"growthexperiments-addimage-summary-label": "Summary",
