Create API to get/set mentee status
The API will facilitate opting-out from mentorship.

Bug: T287915
Change-Id: If1c4633a6d522b6935bd91e0c89655b99d8bbabb

--- a/i18n/mentorship/api/qqq.json
+++ b/i18n/mentorship/api/qqq.json
@@ -12,5 +12,11 @@
 	"apihelp-query+growthmentorstatus-summary": "{{doc-apihelp-summary|query+growthmentorstatus}}",
 	"apihelp-growthmentordashboardupdatedata-summary": "{{doc-apihelp-summary|growthmentordashboardupdatedata}}",
 	"apihelp-growthsetmentorweight-summary": "{{doc-apihelp-summary|growthsetmentorweight}}",
-	"apihelp-growthsetmentorweight-param-geweight": "{{doc-apihelp-param|growthsetmentorweight|geweight}}"
+	"apihelp-growthsetmentorweight-param-geweight": "{{doc-apihelp-param|growthsetmentorweight|geweight}}",
+	"apihelp-growthsetmenteestatus-summary": "{{doc-apihelp-summary|growthsetmenteestatus}}",
+	"apihelp-growthsetmenteestatus-param-state": "{{doc-apihelp-summary|growthsetmenteestatus|state}}",
+	"apihelp-growthsetmenteestatus-param-state-enabled": "{{doc-apihelp-paramvalue|growthsetmenteestatus|state|enabled}}",
+	"apihelp-growthsetmenteestatus-param-state-disabled": "{{doc-apihelp-paramvalue|growthsetmenteestatus|state|disabled}}",
+	"apihelp-growthsetmenteestatus-param-state-optout": "{{doc-apihelp-paramvalue|growthsetmenteestatus|state|optout}}",
+	"apihelp-query+growthmenteestatus-summary": "{{doc-apihelp-summary|query+growthmenteestatus}}"
 }
