--- a/i18n/mentorship/api/en.json
+++ b/i18n/mentorship/api/en.json
@@ -12,5 +12,11 @@
 	"apihelp-query+growthmentorstatus-summary": "Query current user's mentor status",
 	"apihelp-growthmentordashboardupdatedata-summary": "Schedule an extraordinary update of the mentee overview module in the mentor dashboard. You can only schedule one update per two hours for performance reasons.",
 	"apihelp-growthsetmentorweight-summary": "Set weight of currently logged in mentor",
-	"apihelp-growthsetmentorweight-param-geweight": "Numeric weight of the mentor: the lower value, the less newcomers are assigned"
+	"apihelp-growthsetmentorweight-param-geweight": "Numeric weight of the mentor: the lower value, the less newcomers are assigned",
+	"apihelp-growthsetmenteestatus-summary": "Set mentee's status (allows mentees to enable/disable mentorship module, or to opt-out entirely, which deletes the mentee/mentor relationship)",
+	"apihelp-growthsetmenteestatus-param-state": "New status of the mentee (warning: setting this to optout will permanently deletes mentee/mentor relationship)",
+	"apihelp-growthsetmenteestatus-param-state-enabled": "Mentorship module is enabled",
+	"apihelp-growthsetmenteestatus-param-state-disabled": "Mentorship module is fully disabled. This is normally set by the software and used for A/B testing.",
+	"apihelp-growthsetmenteestatus-param-state-optout": "Mentee opted out from mentorship; mentee/mentor relationship will be deleted, mentorship module will be replaced with a possibility to opt back in",
+	"apihelp-query+growthmenteestatus-summary": "Query current user's mentee status; see documentation of action=growthsetmentorweight for detailed information about individual statuses."
 }
