MentorManager: Support weights for mentors
This will allow mentors to serve for higher/lower amount
of mentees, as they wish.

The commit creates MentorWeightManager to wrap
weight logic. Even though the new service currently doesn't
do anything else besides calling UserOptionsManager,
I think it is useful, as it will make it easier for us
to change where weight is stored (I can imagine moving
it to the new structurred mentor page, once we have some).

The MentorWeightManager is exposed via the action API.

Bug: T287917
Change-Id: I2773e3e6943527c3c8708be773a08ed458634c07

--- a/i18n/mentorship/api/en.json
+++ b/i18n/mentorship/api/en.json
@@ -10,5 +10,7 @@
 	"apihelp-growthsetmentorstatus-param-gesstatus": "New status",
 	"apihelp-growthsetmentorstatus-param-gesbackindays": "When setting mentor as away, this must have length of the away status (in days)",
 	"apihelp-query+growthmentorstatus-summary": "Query current user's mentor status",
-	"apihelp-growthmentordashboardupdatedata-summary": "Schedule an extraordinary update of the mentee overview module in the mentor dashboard. You can only schedule one update per two hours for performance reasons."
+	"apihelp-growthmentordashboardupdatedata-summary": "Schedule an extraordinary update of the mentee overview module in the mentor dashboard. You can only schedule one update per two hours for performance reasons.",
+	"apihelp-growthsetmentorweight-summary": "Set weight of currently logged in mentor",
+	"apihelp-growthsetmentorweight-param-geweight": "Numeric weight of the mentor: the lower value, the less newcomers are assigned"
 }
