Add an image: invalidate image recommendation tasks for articles with no recommendations / with existing images
* Create an API for invalidating recommendation in the task set
* Add TaskSet::containsPage to check if an article has a corresponding task in the task set
* Invalidate the task when the article already has an image and the article is in the task set, when all suggestions are filtered out and when there are no suggestions for the article

Bug: T296441
Change-Id: Ic7cd2c0aa57e45eb7266b7d1841da7e267506998

--- a/i18n/homepage/api/en.json
+++ b/i18n/homepage/api/en.json
@@ -10,5 +10,7 @@
 	"apihelp-growthsetmentor-summary": "Set user's mentor. Change will be publicly logged.",
 	"apihelp-growthsetmentor-param-mentee": "Mentee's username",
 	"apihelp-growthsetmentor-param-mentor": "Mentor's username",
-	"apihelp-growthsetmentor-param-reason": "Reason for the change"
+	"apihelp-growthsetmentor-param-reason": "Reason for the change",
+	"apihelp-growthinvalidateimagerecommendation-summary": "Invalidate image recommendation task",
+	"apihelp-growthinvalidateimagerecommendation-param-title": "Title of the article the image recommendation task is for"
 }
