--- a/i18n/mentorship/qqq.json
+++ b/i18n/mentorship/qqq.json
@@ -87,5 +87,12 @@
 	"echo-pref-tooltip-ge-mentorship": "{{doc-echo-pref-tooltip|title=Echo-category-title-dt-subscription}}",
 	"growthexperiments-notification-header-mentee-claimed": "Header of the notification sent to old mentor after one of their mentees was claimed.\n\nParameters:\n* $1 - old mentor's username\n* $2 - old mentor's raw username, for use in GENDER\n* $3 - mentee's username",
 	"growthexperiments-notification-body-mentee-claimed": "Body of the notification sent to old mentor after one of their mentees was claimed.\n\nParameters:\n* $1: reason of the change",
-	"growthexperiments-notification-secondary-link-label-mentee-claimed": "Label of the secondary link in the notification sent to old mentor after one of their mentees was claimed."
+	"growthexperiments-notification-secondary-link-label-mentee-claimed": "Label of the secondary link in the notification sent to old mentor after one of their mentees was claimed.",
+	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-headline": "Subheader in the \"Mentor tools\" mentor dashboard module\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-low": "Label in the \"Mentor tools\" mentor dashboard module\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-medium": "Label in the \"Mentor tools\" mentor dashboard module\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-high": "Label in the \"Mentor tools\" mentor dashboard module\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-changed": "Confirmation message shown by the \"Mentor tools\" mentor dashboard module after changing mentor load\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-info-text-line1": "Tooltip shown by the \"Mentor tools\" mentor dashboard module when allowing to change mentor load\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-info-text-line2": "Tooltip shown by the \"Mentor tools\" mentor dashboard module when allowing to change mentor load\n\n{{doc-growthexperiments-mentor-dashboard}}"
 }
