Add an image: Save the rejection directly
* Call ArticleTarget's onSaveDialogSave and show a loading state when the suggestion is rejected
* Remove logic for showing rejected suggestion AddImageSaveDialog
* Set the edit summary autocomment by overriding ArticleTarget's getSaveOptions (instead of setting editSummaryInput's value in the save dialog)

Bug: T295929
Change-Id: I44bfbe163d8b571599dd94914d7507dbabe185ac

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -450,6 +450,7 @@
 	"growthexperiments-newcomertasks-invalid-tasktype": "Invalid task type(s): $1",
 	"growthexperiments-addimage-caption-title": "Add a caption",
 	"growthexperiments-addimage-loading-title": "Loading image preview…",
+	"growthexperiments-addimage-submitting-title": "Submitting…",
 	"growthexperiments-addimage-caption-placeholder": "Write a short caption describing how this image is relevant to <strong>$1</strong>",
 	"growthexperiments-addimage-caption-info-dialog-title": "Write a caption to go with the image in the article",
 	"growthexperiments-addimage-caption-info-dialog-message": "Readers of <strong>$1</strong> will see the caption displayed under the image.",
@@ -465,7 +466,6 @@
 	"growthexperiments-structuredtask-anonuser": "User is no longer logged in.",
 	"growthexperiments-addimage-summary-label": "Summary",
 	"growthexperiments-addimage-summary-copyrightwarning": "By saving changes, {{GENDER:|you}} agree to the [https://foundation.wikimedia.org/wiki/Terms_of_Use Terms of Use] and agree to release your contribution under the [https://creativecommons.org/licenses/by-sa/3.0/ CC BY-SA 3.0] and [https://www.gnu.org/licenses/fdl-1.3.html GFDL] licenses.",
-	"growthexperiments-addimage-summary-reject-description": "This image suggestion was rejected.",
 	"growthexperiments-addimage-summary-summary": "Image suggestions feature: $1 {{PLURAL:$1|image|images}} added.",
 	"growthexperiments-addimage-reason-wikipedia": "Used in the same article in $1 {{PLURAL:$1|other language|other languages}}.",
 	"growthexperiments-addimage-reason-wikipedia-languages": "Used in the same article in $1 {{PLURAL:$1|other language|other languages}}: $2.",
