Add signup langing page for JOSA campaign
Bug: T298057
Change-Id: I57e70cbf31ca7f1f5d031ccec83a3122ee5098e7

--- a/i18n/confirmemail/qqq.json
+++ b/i18n/confirmemail/qqq.json
@@ -22,5 +22,7 @@
 	"growthexperiments-signupcampaign-bullet2": "Second highlight of the Special:CreateAccount block that's shown to Wikimedia donors. (This is for a one-off experiment and will be removed soon. Only needs to be translated into es and pt.)",
 	"growthexperiments-signupcampaign-bullet3": "Third highlight of the Special:CreateAccount block that's shown to Wikimedia donors. (This is for a one-off experiment and will be removed soon. Only needs to be translated into es and pt.)",
 	"growthexperiments-recurringcampaign-title": "{{Notranslate}}\nThis is for a one-off experiment and will be removed soon. Does not need to be translated.\n\nTitle of the Special:CreateAccount block that is shown to recurring Wikimedia donors.",
-	"growthexperiments-recurringcampaign-body": "{{Notranslate}}\nThis is for a one-off experiment and will be removed soon. Does not need to be translated.\n\nBody of the Special:CreateAccount block that is shown to recurring Wikimedia donors."
+	"growthexperiments-recurringcampaign-body": "{{Notranslate}}\nThis is for a one-off experiment and will be removed soon. Does not need to be translated.\n\nBody of the Special:CreateAccount block that is shown to recurring Wikimedia donors.",
+	"growthexperiments-josacampaign-title": "{{Notranslate}}\nThis is for a one-off experiment and will be removed soon. Does not need to be translated.\n\nTitle of the Special:CreateAccount block that is shown during the JOSA signup event.",
+	"growthexperiments-josacampaign-body": "{{Notranslate}}\nThis is for a one-off experiment and will be removed soon. Does not need to be translated.\n\nBody of the Special:CreateAccount block that is shown during the JOSA signup event."
 }
