--- a/i18n/confirmemail/ar.json
+++ b/i18n/confirmemail/ar.json
@@ -19,5 +19,7 @@
 	"growthexperiments-signupcampaign-body": "يمكن للتعديل في ويكيبيديا أن يكون سهلا بقدر سهولة إضافة رابط أو تغيير عبارة ما. احصلوا على اقتراحات لمقالات من {{GENDER:|اهتماماتك}} بعد إنشاء حساب خاص بكم!",
 	"growthexperiments-signupcampaign-bullet1": "المقالات المقترحة من {{GENDER:|اهتماماتك}}",
 	"growthexperiments-signupcampaign-bullet2": "اطلبوا المساعدة من المساهمين الخبيرين",
-	"growthexperiments-signupcampaign-bullet3": "ابدؤوا بالتعديلات الصغيرة والسهلة"
+	"growthexperiments-signupcampaign-bullet3": "ابدؤوا بالتعديلات الصغيرة والسهلة",
+	"growthexperiments-josacampaign-title": "مرحبًا بكم في احتفال \"عيد ميلاد ويكيبيديا\"\n\nيمكنكم بمجرّد إنشاء حسابكم البدء بالمساهمة في الموسوعة",
+	"growthexperiments-josacampaign-body": "هذه فعالية تُنظِّمها \"الجمعية الأردنية للمصدر المفتوح\" و\"ويكيميديا بلاد الشام\" لمساعدتكم في التعرف إلى ويكيبيديا وكيفية المساهمة فيها.\n\nللبدء بالمساهمة، كل ما عليك هو تعبئة هذا النموذج ثم اختيار مهمة للعمل عليها.\n\nلو احتجت لأي مساعدة، لطفًا سؤال منظمي الفعالية.\n\n"
 }
