--- a/i18n/confirmemail/en.json
+++ b/i18n/confirmemail/en.json
@@ -18,5 +18,7 @@
 	"growthexperiments-signupcampaign-bullet2": "Ask for help from an experienced editor",
 	"growthexperiments-signupcampaign-bullet3": "Start with small, easy edits",
 	"growthexperiments-recurringcampaign-title": "Thanks for being a loyal supporter. It’s contributions from readers like {{GENDER:|you}} that keep Wikipedia thriving.",
-	"growthexperiments-recurringcampaign-body": "Create your account now to log in and avoid seeing fundraising banners. Once {{GENDER:|you}} have an account, {{GENDER:|you}} can also learn to edit Wikipedia with small changes that will have a big impact for the rest of the world. We’ll be there to guide {{GENDER:|you}} as {{GENDER:|you}} start!"
+	"growthexperiments-recurringcampaign-body": "Create your account now to log in and avoid seeing fundraising banners. Once {{GENDER:|you}} have an account, {{GENDER:|you}} can also learn to edit Wikipedia with small changes that will have a big impact for the rest of the world. We’ll be there to guide {{GENDER:|you}} as {{GENDER:|you}} start!",
+	"growthexperiments-josacampaign-title": "Welcome to Wikipedia's Birthday Celebration!\n\nOnce you have created your account you can start contributing to the encyclopedia.",
+	"growthexperiments-josacampaign-body": "This is an event organized by the Jordanian Open Source Association and Wikimedia in the Levant to help you learn about Wikipedia and how to contribute to it.\n\nTo start contributing, all you have to do is fill out this form and then choose a task to work on.\n\nIf you need any help, please ask the event organizers."
 }
