Make WikiPageConfigLoader support loading a mentor list
This consists of writing and registering a validation logic
for the mentor list, as WikiPageConfigLoader only supports pages
that can be validated by a config validator.

There will be only one mentor list, stored on-wiki as
MediaWiki:GrowthMentors.json (can be configured through
GEStructuredMentorList). Whether a mentor is assigned
automatically or not will be controlled by a field called
`automaticallyAssigned`.

Each top-level key is an array<int,array>, where the int
is the mentor's user ID and array is an object describing
the mentor (including more detailed information about the mentor,
such as, their message to the newcomer).

I decided to use user IDs rather than usernames, because user IDs
are guaranteed to be stable, even when the user gets renamed, while
usernames can change at any time (without an easy way to update
the mentor list back).

The array (describing the mentor) can contain the following fields:
   * message: contains the mentor's introductory message (or null if the
     default one is to be used)
   * weight: number controlling mentor's defined weight (replaces
     MentorWeightManager)
   * automaticallyAssigned: a boolean controlling whether the mentor
     is automatically assigned to any newcomers.

Bug: T264343
Change-Id: Iec28a0bd513674e790e25666e09b59cf9a5cb6fd

--- a/i18n/mentorship/qqq.json
+++ b/i18n/mentorship/qqq.json
@@ -93,5 +93,8 @@
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-high": "Label in the \"Mentor tools\" mentor dashboard module\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-changed": "Confirmation message shown by the \"Mentor tools\" mentor dashboard module after changing mentor load\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-info-text-line1": "Tooltip shown by the \"Mentor tools\" mentor dashboard module when allowing to change mentor load\n\n{{doc-growthexperiments-mentor-dashboard}}",
-	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-info-text-line2": "Tooltip shown by the \"Mentor tools\" mentor dashboard module when allowing to change mentor load\n\n{{doc-growthexperiments-mentor-dashboard}}"
+	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-info-text-line2": "Tooltip shown by the \"Mentor tools\" mentor dashboard module when allowing to change mentor load\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-list-missing-key": "Error message displayed when a manual save of MediaWiki:GrowthMentors.json (configurable by <code>GEStructuredMentorList</code>) is invalid.",
+	"growthexperiments-mentor-list-datatype-mismatch": "Error message displayed when a manual save of MediaWiki:GrowthMentors.json (configurable by <code>GEStructuredMentorList</code>) is invalid.",
+	"growthexperiments-mentor-list-unexpected-key-mentor": "Error message displayed when a manual save of MediaWiki:GrowthMentors.json (configurable by <code>GEStructuredMentorList</code>) is invalid."
 }
