Homepage: Let mentees re-enable mentorship after opting-out
Allows newcomers who opted out of mentorship to opt in again.
Rather than altering the current Mentorship module to adapt itself
when the user opted-out of mentorship, this patch creates a new homepage
module that's only enabled when user's mentorship state is MENTORSHIP_OPTED_OUT.

To test this commit, you can call the API with action=growthsetmenteestatus&state=optout.
Alternatively, set `growthexperiments-homepage-mentorship-enabled` to 2 or call
MentorManager::setMentorshipStateForUser($user, MentorManager::MENTORSHIP_OPTED_OUT).

This is safe to merge at any time, because it will not be shown (unless manually
invoked by one of the techniques explained above).

Bug: T287915
Change-Id: I55f8dacf11b24b4d052fa40ac418e85901fdd104

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -487,5 +487,12 @@
 	"growthexperiments-addimage-daily-task-limit-exceeded-dialog-button": "Got it",
 	"growthexperiments-addimage-caption-warning-tooshort": "Captions must be $1 {{PLURAL:$1|character|characters}} or longer.",
 	"growthexperiments-addlink-daily-task-limit-exceeded": "{{GENDER:|You}} have completed all of today's link suggestions.\n\nAdjust {{GENDER:|your}} difficulty levels to see other types of edits or come back tomorrow for more link suggestions.",
-	"growthexperiments-addlink-daily-task-limit-exceeded-dialog-button": "Got it"
+	"growthexperiments-addlink-daily-task-limit-exceeded-dialog-button": "Got it",
+	"growthexperiments-homepage-mentorship-optin-header": "Mentor for editing",
+	"growthexperiments-homepage-mentorship-optin-text": "If {{GENDER:|you}} have questions about editing, an experienced editor can be assigned as your “mentor” to help you.",
+	"growthexperiments-homepage-mentorship-optin-button": "Get a mentor",
+	"growthexperiments-homepage-mentorship-confirm-dialog-header": "Get a mentor?",
+	"growthexperiments-homepage-mentorship-confirm-dialog-text": "Continue to get an experienced editor as {{GENDER:|your}} editing mentor.",
+	"growthexperiments-homepage-mentorship-confirm-dialog-cancel": "Cancel",
+	"growthexperiments-homepage-mentorship-confirm-dialog-continue": "Continue"
 }
